--- a/src/gui/Login.fxml
+++ b/src/gui/Login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="airbook.MainMenuController">
+<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainMenuController">
    <children>
       <AnchorPane layoutY="475.0" prefHeight="75.0" prefWidth="500.0" style="-fx-background-color: #ECEFFC;">
          <children>
@@ -39,7 +39,7 @@
          <children>
             <ImageView fitHeight="126.0" fitWidth="97.0" layoutX="202.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/LogosLogo%20Negative-100.jpg" />
+                  <Image url="@../airbook/images/LogosLogo%20Negative-100.jpg" />
                </image>
             </ImageView>
          </children></AnchorPane>
