--- a/src/gui/Login.fxml
+++ b/src/gui/Login.fxml
@@ -10,27 +10,37 @@
 
 <AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainMenuController">
    <children>
-      <AnchorPane layoutY="475.0" prefHeight="75.0" prefWidth="500.0" style="-fx-background-color: #ECEFFC;">
+      <AnchorPane layoutY="475.0" prefHeight="75.0" prefWidth="500.0" style="-fx-background-color: #F3E7C3;">
          <children>
-            <Button layoutX="109.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: #ECEFFC;" text="¿No estás registrado? Regístrate aquí" textFill="#8d9096">
+            <Button layoutX="109.0" layoutY="22.0" mnemonicParsing="false" style="-fx-background-color: #F3E7C3;" text="¿No estás registrado? Regístrate aquí" textFill="#8d9096">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="96.0" prefHeight="379.0" prefWidth="500.0" style="-fx-background-color: #ffffff;">
+      <AnchorPane layoutY="96.0" prefHeight="379.0" prefWidth="500.0" style="-fx-background-color: #F2F2F2;">
          <children>
-            <TextField fx:id="TextUsuario" layoutX="96.0" layoutY="114.0" prefHeight="34.0" prefWidth="309.0" promptText="Cédula" />
+            <TextField fx:id="TextUsuario" layoutX="96.0" layoutY="114.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese cédula" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
             <Button fx:id="InicioSesion" layoutX="96.0" layoutY="270.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="309.0" style="-fx-background-color: #F1DE9C;" text="Iniciar Sesión">
                <font>
                   <Font name="Tw Cen MT Condensed Bold" size="17.0" />
                </font>
             </Button>
-            <TextField fx:id="TextPassw" layoutX="96.0" layoutY="190.0" prefHeight="34.0" prefWidth="309.0" promptText="Contraseña" />
+            <TextField fx:id="TextPassw" layoutX="96.0" layoutY="190.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese contraseña" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
             <Text layoutX="171.0" layoutY="61.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Inició de Sesión" wrappingWidth="159.00000035762787">
                <font>
                   <Font name="Tw Cen MT" size="25.0" />
+               </font>
+            </Text>
+            <Text fill="#d8754e" layoutX="103.0" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cédula" wrappingWidth="56.00000035762787">
+               <font>
+                  <Font name="Tw Cen MT" size="17.0" />
+               </font>
+            </Text>
+            <Text fill="#d8754e" layoutX="103.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña" wrappingWidth="84.00000035762787">
+               <font>
+                  <Font name="Tw Cen MT" size="17.0" />
                </font>
             </Text>
          </children>
