--- a/src/gui/MainMenu.fxml
+++ b/src/gui/MainMenu.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,7 +15,7 @@
    <children>
       <AnchorPane prefHeight="108.0" prefWidth="850.0" style="-fx-background-color: #F2F2F2;">
          <children>
-            <Button fx:id="login" layoutX="710.0" layoutY="10.0" mnemonicParsing="false" onAction="#loginButtonPushed" prefHeight="91.0" prefWidth="126.0" style="-fx-background-color: #F2F2F2;" text="Iniciar Sesión" textAlignment="CENTER" wrapText="true">
+            <Button fx:id="login" layoutX="710.0" layoutY="10.0" mnemonicParsing="false" onAction="#loginButtonPushed" prefHeight="91.0" prefWidth="126.0" style="-fx-background-color: #F2F2F2;" stylesheets="@../Styles/TextStyle.css" text="Iniciar Sesión" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="Tw Cen MT" size="17.0" />
                </font>
@@ -49,20 +50,26 @@
          <children>
             <AnchorPane layoutX="32.0" layoutY="20.0" prefHeight="160.0" prefWidth="650.0" style="-fx-background-color: #ffffff;">
                <children>
-                  <AnchorPane prefHeight="192.0" prefWidth="650.0" style="-fx-background-color: #ffffff;">
+                  <AnchorPane prefHeight="192.0" prefWidth="650.0" style="-fx-background-color: #F2F2F2;">
                      <children>
-                        <TextField fx:id="text_search" layoutX="34.0" layoutY="70.0" prefHeight="45.0" prefWidth="462.0" promptText="Búsqueda Rápida" />
+                        <TextField fx:id="text_search" layoutX="34.0" layoutY="70.0" prefHeight="45.0" prefWidth="462.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets></TextField>
                         <Button fx:id="button_search" layoutX="34.0" layoutY="133.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="85.0" style="-fx-background-color: #F1DE9C;" text="Continuar">
                            <font>
                               <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                            </font>
                         </Button>
-                        <Button layoutX="7.0" layoutY="14.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="220.0" style="-fx-background-color: #ffffff;" text="Búsqueda de Libros">
+                        <ComboBox fx:id="menu_filter" depthTest="DISABLE" layoutX="514.0" layoutY="70.0" prefHeight="45.0" prefWidth="114.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" />
+                        <Label layoutX="34.0" layoutY="26.0" text="Búsqueda de Libros">
                            <font>
-                              <Font name="Tw Cen MT Bold" size="21.0" />
+                              <Font name="Tw Cen MT Bold" size="20.0" />
                            </font>
-                        </Button>
-                        <ComboBox fx:id="menu_filter" layoutX="514.0" layoutY="70.0" prefHeight="45.0" prefWidth="114.0" promptText="Filtros" />
+                        </Label>
                      </children>
                   </AnchorPane>
                </children>
