--- a/src/gui/Registro.fxml
+++ b/src/gui/Registro.fxml
@@ -10,22 +10,37 @@
 
 <AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainMenuController">
    <children>
-      <AnchorPane layoutY="475.0" prefHeight="75.0" prefWidth="500.0" style="-fx-background-color: #ECEFFC;" />
-      <AnchorPane layoutY="96.0" prefHeight="379.0" prefWidth="500.0" style="-fx-background-color: #ffffff;">
+      <AnchorPane layoutY="475.0" prefHeight="75.0" prefWidth="500.0" style="-fx-background-color: #F3E7C3;" />
+      <AnchorPane layoutY="96.0" prefHeight="379.0" prefWidth="500.0" style="-fx-background-color: #F2F2F2;">
          <children>
-            <TextField fx:id="TextUsuario" layoutX="95.0" layoutY="156.0" prefHeight="34.0" prefWidth="309.0" promptText="Cédula" />
-            <Button layoutX="96.0" layoutY="275.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="309.0" style="-fx-background-color: #F1DE9C;" text="Registrar">
+            <TextField fx:id="TextUsuario" layoutX="95.0" layoutY="186.0" prefHeight="34.0" prefWidth="309.0" promptText="Cédula" stylesheets="@../Styles/TextStyle.css" />
+            <Button layoutX="95.0" layoutY="329.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="309.0" style="-fx-background-color: #F1DE9C;" text="Registrar">
                <font>
                   <Font name="Tw Cen MT Condensed Bold" size="17.0" />
                </font>
             </Button>
-            <TextField fx:id="TextPassw" layoutX="96.0" layoutY="218.0" prefHeight="34.0" prefWidth="309.0" promptText="Contraseña" />
+            <TextField fx:id="TextPassw" layoutX="96.0" layoutY="266.0" prefHeight="34.0" prefWidth="309.0" promptText="Contraseña" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
             <Text layoutX="152.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registro de usuario" wrappingWidth="195.00000035762787">
                <font>
                   <Font name="Tw Cen MT" size="25.0" />
                </font>
             </Text>
-            <TextField fx:id="TextUsuario1" layoutX="95.0" layoutY="96.0" prefHeight="34.0" prefWidth="309.0" promptText="Nombre " />
+            <TextField fx:id="TextUsuario1" layoutX="95.0" layoutY="96.0" prefHeight="34.0" prefWidth="309.0" promptText="Nombre " styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
+            <Text fill="#d8754e" layoutX="104.0" layoutY="176.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cédula" wrappingWidth="56.00000035762787">
+               <font>
+                  <Font name="Tw Cen MT" size="17.0" />
+               </font>
+            </Text>
+            <Text fill="#d8754e" layoutX="104.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" wrappingWidth="56.00000035762787">
+               <font>
+                  <Font name="Tw Cen MT" size="17.0" />
+               </font>
+            </Text>
+            <Text fill="#d8754e" layoutX="105.0" layoutY="263.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña" wrappingWidth="84.00000035762787">
+               <font>
+                  <Font name="Tw Cen MT" size="17.0" />
+               </font>
+            </Text>
          </children>
       </AnchorPane>
       <AnchorPane prefHeight="97.0" prefWidth="500.0" style="-fx-background-color: #D8754E;">
