--- a/src/gui/MainMenu.fxml
+++ b/src/gui/MainMenu.fxml
@@ -59,7 +59,7 @@
                            <opaqueInsets>
                               <Insets />
                            </opaqueInsets></TextField>
-                        <Button fx:id="button_search" layoutX="34.0" layoutY="133.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="85.0" style="-fx-background-color: #F1DE9C;" text="Continuar">
+                        <Button fx:id="button_search" layoutX="34.0" layoutY="133.0" mnemonicParsing="false" onAction="#searchByIsbn" prefHeight="38.0" prefWidth="85.0" style="-fx-background-color: #F1DE9C;" text="Continuar">
                            <font>
                               <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                            </font>
