--- a/src/gui/Login.fxml
+++ b/src/gui/Login.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainMenuController">
+<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.LoginController">
    <children>
       <AnchorPane layoutY="475.0" prefHeight="75.0" prefWidth="500.0" style="-fx-background-color: #F3E7C3;">
          <children>
@@ -21,8 +21,8 @@
       </AnchorPane>
       <AnchorPane layoutY="96.0" prefHeight="379.0" prefWidth="500.0" style="-fx-background-color: #F2F2F2;">
          <children>
-            <TextField fx:id="TextUsuario" layoutX="96.0" layoutY="114.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese cédula" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
-            <Button fx:id="InicioSesion" layoutX="96.0" layoutY="270.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="309.0" style="-fx-background-color: #F1DE9C;" text="Iniciar Sesión">
+            <TextField fx:id="TextCedula" layoutX="96.0" layoutY="114.0" prefHeight="34.0" prefWidth="309.0" promptText="Ingrese cédula" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" />
+            <Button fx:id="InicioSesion" layoutX="96.0" layoutY="270.0" mnemonicParsing="false" onAction="#LoginButtonPushed" prefHeight="31.0" prefWidth="309.0" style="-fx-background-color: #F1DE9C;" text="Iniciar Sesión">
                <font>
                   <Font name="Tw Cen MT Condensed Bold" size="17.0" />
                </font>
