--- a/src/gui/MainMenu.fxml
+++ b/src/gui/MainMenu.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,108 +15,164 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.MainMenuController">
    <children>
-      <AnchorPane prefHeight="108.0" prefWidth="850.0" style="-fx-background-color: #F2F2F2;">
+      <AnchorPane fx:id="anchorHome" layoutX="-2.0" style="-fx-background-color: #F2F2F2;">
          <children>
-            <Button fx:id="login" layoutX="710.0" layoutY="10.0" mnemonicParsing="false" onAction="#loginButtonPushed" prefHeight="91.0" prefWidth="126.0" style="-fx-background-color: #F2F2F2;" stylesheets="@../Styles/TextStyle.css" text="Iniciar Sesión" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Tw Cen MT" size="17.0" />
-               </font>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-               <cursor>
-                  <Cursor fx:constant="DEFAULT" />
-               </cursor>
-            </Button>
-            <Button fx:id="registro" layoutX="596.0" layoutY="10.0" mnemonicParsing="false" onAction="#registroButtonPushed" prefHeight="91.0" prefWidth="114.0" style="-fx-background-color: #F2F2F2;" text="Registrarse" textAlignment="CENTER" wrapText="true">
-               <font>
-                  <Font name="Tw Cen MT" size="17.0" />
-               </font>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </Button>
-            <ImageView fitHeight="99.0" fitWidth="102.0" layoutX="13.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../airbook/images/LogosLogo-100.jpg" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="264.0" fitWidth="853.0" layoutX="-2.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../airbook/images/BannerArtboard%201-100.jpg" />
-               </image>
-            </ImageView>
+            <AnchorPane layoutX="2.0" prefHeight="108.0" prefWidth="850.0" style="-fx-background-color: #F2F2F2;">
+               <children>
+                  <Button fx:id="login" layoutX="710.0" layoutY="10.0" mnemonicParsing="false" onAction="#loginButtonPushed" prefHeight="91.0" prefWidth="126.0" style="-fx-background-color: #F2F2F2;" stylesheets="@../Styles/TextStyle.css" text="Iniciar Sesión" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="Tw Cen MT" size="17.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                     <cursor>
+                        <Cursor fx:constant="DEFAULT" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="registro" layoutX="596.0" layoutY="10.0" mnemonicParsing="false" onAction="#registroButtonPushed" prefHeight="91.0" prefWidth="114.0" style="-fx-background-color: #F2F2F2;" text="Registrarse" textAlignment="CENTER" wrapText="true">
+                     <font>
+                        <Font name="Tw Cen MT" size="17.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </Button>
+                  <ImageView fitHeight="99.0" fitWidth="102.0" layoutX="13.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../airbook/images/LogosLogo-100.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="264.0" fitWidth="853.0" layoutX="-2.0" layoutY="102.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../airbook/images/BannerArtboard%201-100.jpg" />
+                     </image>
+                  </ImageView>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="72.0" layoutY="275.0" prefHeight="234.0" prefWidth="710.0" style="-fx-background-color: #D8754E;">
+               <children>
+                  <AnchorPane layoutX="32.0" layoutY="20.0" prefHeight="160.0" prefWidth="650.0" style="-fx-background-color: #ffffff;">
+                     <children>
+                        <AnchorPane prefHeight="192.0" prefWidth="650.0" style="-fx-background-color: #F2F2F2;">
+                           <children>
+                              <TextField fx:id="text_search" layoutX="34.0" layoutY="70.0" prefHeight="45.0" prefWidth="346.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                              </TextField>
+                              <Button fx:id="button_search" layoutX="524.0" layoutY="78.0" mnemonicParsing="false" onAction="#onClicBuscarLibro" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #F1DE9C;" text="Buscar">
+                                 <font>
+                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+                                 </font>
+                              </Button>
+                              <ComboBox fx:id="menu_filter" depthTest="DISABLE" layoutX="388.0" layoutY="69.0" prefHeight="45.0" prefWidth="114.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" />
+                              <Label layoutX="34.0" layoutY="26.0" text="Búsqueda de Libros">
+                                 <font>
+                                    <Font name="Tw Cen MT Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="29.0" layoutY="546.0">
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="35.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../airbook/images/booksArtboard%201-100.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="638.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../airbook/images/booksArtboard%204-100.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="438.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../airbook/images/booksArtboard%203-100.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="235.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../airbook/images/booksArtboard%202-100.jpg" />
+                     </image>
+                  </ImageView>
+                  <Button layoutY="160.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="1984">
+                     <font>
+                        <Font name="Tw Cen MT Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="195.0" layoutY="159.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="Cien años de soledad">
+                     <font>
+                        <Font name="Tw Cen MT Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="404.0" layoutY="159.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="IT">
+                     <font>
+                        <Font name="Tw Cen MT Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="605.0" layoutY="159.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="Fahrenheit 451">
+                     <font>
+                        <Font name="Tw Cen MT Bold" size="15.0" />
+                     </font>
+                  </Button>
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="70.0" layoutY="275.0" prefHeight="234.0" prefWidth="710.0" style="-fx-background-color: #D8754E;">
+      <AnchorPane fx:id="anchorBusquedaLibros" layoutY="99.0" prefHeight="750.0" prefWidth="850.0" style="-fx-background-color: #D8754E;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane layoutX="32.0" layoutY="20.0" prefHeight="160.0" prefWidth="650.0" style="-fx-background-color: #ffffff;">
+            <AnchorPane layoutX="13.0" layoutY="13.0" prefHeight="638.0" prefWidth="837.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                <children>
-                  <AnchorPane prefHeight="192.0" prefWidth="650.0" style="-fx-background-color: #F2F2F2;">
+                  <AnchorPane prefHeight="631.0" prefWidth="830.0" style="-fx-background-color: #F2F2F2;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <TextField fx:id="text_search" layoutX="34.0" layoutY="70.0" prefHeight="45.0" prefWidth="462.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css">
-                           <padding>
-                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                           </padding>
-                           <opaqueInsets>
-                              <Insets />
-                           </opaqueInsets></TextField>
-                        <Button fx:id="button_search" layoutX="34.0" layoutY="133.0" mnemonicParsing="false" onAction="#searchByIsbn" prefHeight="38.0" prefWidth="85.0" style="-fx-background-color: #F1DE9C;" text="Continuar">
-                           <font>
-                              <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                           </font>
-                        </Button>
-                        <ComboBox fx:id="menu_filter" depthTest="DISABLE" layoutX="514.0" layoutY="70.0" prefHeight="45.0" prefWidth="114.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" />
-                        <Label layoutX="34.0" layoutY="26.0" text="Búsqueda de Libros">
-                           <font>
-                              <Font name="Tw Cen MT Bold" size="20.0" />
-                           </font>
-                        </Label>
+                        <AnchorPane layoutX="34.0" layoutY="26.0" prefHeight="106.0" prefWidth="790.0" AnchorPane.bottomAnchor="604.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+                           <children>
+                              <TextField fx:id="text_search1" layoutY="44.0" prefHeight="40.0" prefWidth="462.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="328.0" AnchorPane.topAnchor="44.0">
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                                 <opaqueInsets>
+                                    <Insets />
+                                 </opaqueInsets>
+                              </TextField>
+                              <Button fx:id="button_search1" layoutY="107.0" mnemonicParsing="false" onAction="#searchByIsbn" prefHeight="40.0" prefWidth="154.0" style="-fx-background-color: #F1DE9C;" text="Continuar" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="636.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="44.0">
+                                 <font>
+                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+                                 </font>
+                              </Button>
+                              <ComboBox fx:id="menu_filter1" depthTest="DISABLE" layoutX="480.0" layoutY="44.0" prefHeight="40.0" prefWidth="142.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="485.0" AnchorPane.rightAnchor="163.0" AnchorPane.topAnchor="44.0" />
+                              <Label text="Búsqueda de Libros">
+                                 <font>
+                                    <Font name="Tw Cen MT Bold" size="20.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane layoutX="19.0" layoutY="118.0" prefHeight="599.0" prefWidth="792.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="120.0">
+                           <children>
+                              <TableView fx:id="tableBusquedaLibros" prefHeight="590.0" prefWidth="790.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <columns>
+                                  <TableColumn fx:id="columnNombreBusquedaLibro" prefWidth="197.5" text="Nombre" />
+                                  <TableColumn fx:id="columnAutorBusquedaLibro" prefWidth="197.5" text="Autor" />
+                                    <TableColumn fx:id="columnEditorialBusquedaLibro" prefWidth="197.5" text="Editorial" />
+                                    <TableColumn fx:id="columnIsbnBusquedaLibro" prefWidth="197.5" text="ISBN" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </AnchorPane>
                      </children>
                   </AnchorPane>
                </children>
             </AnchorPane>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="62.0" layoutY="551.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../airbook/images/booksArtboard%201-100.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="665.0" layoutY="546.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../airbook/images/booksArtboard%204-100.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="465.0" layoutY="548.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../airbook/images/booksArtboard%203-100.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="262.0" layoutY="549.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../airbook/images/booksArtboard%202-100.jpg" />
-         </image>
-      </ImageView>
-      <Button layoutX="27.0" layoutY="706.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="1984">
-         <font>
-            <Font name="Tw Cen MT Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="222.0" layoutY="705.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="Cien años de soledad">
-         <font>
-            <Font name="Tw Cen MT Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="431.0" layoutY="705.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="IT">
-         <font>
-            <Font name="Tw Cen MT Bold" size="15.0" />
-         </font>
-      </Button>
-      <Button layoutX="632.0" layoutY="705.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="189.0" style="-fx-background-color: #F2F2F2;" text="Fahrenheit 451">
-         <font>
-            <Font name="Tw Cen MT Bold" size="15.0" />
-         </font>
-      </Button>
    </children>
 </AnchorPane>
