--- a/src/gui/MainMenu.fxml
+++ b/src/gui/MainMenu.fxml
@@ -56,7 +56,7 @@
                      <children>
                         <AnchorPane prefHeight="192.0" prefWidth="650.0" style="-fx-background-color: #F2F2F2;">
                            <children>
-                              <TextField fx:id="text_search" layoutX="34.0" layoutY="70.0" prefHeight="45.0" prefWidth="346.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css">
+                              <TextField fx:id="textSearchHome" layoutX="34.0" layoutY="70.0" prefHeight="45.0" prefWidth="346.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css">
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </padding>
@@ -64,7 +64,7 @@
                                     <Insets />
                                  </opaqueInsets>
                               </TextField>
-                              <Button fx:id="button_search" layoutX="524.0" layoutY="78.0" mnemonicParsing="false" onAction="#onClicBuscarLibro" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #F1DE9C;" text="Buscar">
+                              <Button fx:id="button_search" layoutX="524.0" layoutY="78.0" mnemonicParsing="false" onAction="#onClicSearchLibroHome" prefHeight="38.0" prefWidth="109.0" style="-fx-background-color: #F1DE9C;" text="Buscar">
                                  <font>
                                     <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                                  </font>
@@ -135,7 +135,7 @@
                      <children>
                         <AnchorPane layoutX="34.0" layoutY="26.0" prefHeight="106.0" prefWidth="790.0" AnchorPane.bottomAnchor="604.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
                            <children>
-                              <TextField fx:id="text_search1" layoutY="44.0" prefHeight="40.0" prefWidth="462.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="328.0" AnchorPane.topAnchor="44.0">
+                              <TextField fx:id="textSearchBusquedaLibros" layoutY="44.0" onKeyTyped="#onClicTxtBusquedaLibro" prefHeight="40.0" prefWidth="562.0" promptText="Búsqueda Rápida" styleClass="text-field" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="228.0" AnchorPane.topAnchor="44.0">
                                  <padding>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </padding>
@@ -143,12 +143,7 @@
                                     <Insets />
                                  </opaqueInsets>
                               </TextField>
-                              <Button fx:id="button_search1" layoutY="107.0" mnemonicParsing="false" onAction="#searchByIsbn" prefHeight="40.0" prefWidth="154.0" style="-fx-background-color: #F1DE9C;" text="Continuar" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="636.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="44.0">
-                                 <font>
-                                    <Font name="Tw Cen MT Condensed Bold" size="16.0" />
-                                 </font>
-                              </Button>
-                              <ComboBox fx:id="menu_filter1" depthTest="DISABLE" layoutX="480.0" layoutY="44.0" prefHeight="40.0" prefWidth="142.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="485.0" AnchorPane.rightAnchor="163.0" AnchorPane.topAnchor="44.0" />
+                              <ComboBox fx:id="menuFilterBusquedaLibros" depthTest="DISABLE" layoutX="570.0" layoutY="44.0" prefHeight="40.0" prefWidth="220.0" promptText="Filtros" styleClass="combo-box" stylesheets="@../Styles/TextStyle.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="570.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="44.0" />
                               <Label text="Búsqueda de Libros">
                                  <font>
                                     <Font name="Tw Cen MT Bold" size="20.0" />
