--- a/src/gui/MainMenu.fxml
+++ b/src/gui/MainMenu.fxml
@@ -174,7 +174,7 @@
                                     <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                                  </font>
                               </Button>
-                              <Button layoutX="646.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Ver Más">
+                              <Button fx:id="btnVerMasDetallesLibro" layoutX="646.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Ver Más">
                                  <font>
                                     <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                                  </font>
@@ -242,18 +242,23 @@
                               <Font name="Tw Cen MT Bold" size="17.0" />
                            </font>
                         </Label>
-                        <TextField fx:id="tituloDetalleLibro" layoutX="80.0" layoutY="50.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField fx:id="autorDetalleLibro" layoutX="80.0" layoutY="81.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField fx:id="editorialDetalleLibro" layoutX="96.0" layoutY="114.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField fx:id="anoDetalleLibro" layoutX="177.0" layoutY="149.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField fx:id="isbnDetalleLibro" layoutX="129.0" layoutY="187.0" stylesheets="@../Styles/TextStyle.css" />
-                        <TextField fx:id="precioDetalleLibro" layoutX="80.0" layoutY="221.0" stylesheets="@../Styles/TextStyle.css" />
-                        <Button layoutX="592.0" layoutY="425.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="130.0" style="-fx-background-color: #F1DE9C;" text="Agreagr al carrito">
+                        <TextField fx:id="tituloDetalleLibro" editable="false" layoutX="70.0" layoutY="50.0" stylesheets="@../Styles/TextStyle.css" />
+                        <TextField fx:id="autorDetalleLibro" editable="false" layoutX="80.0" layoutY="81.0" stylesheets="@../Styles/TextStyle.css" />
+                        <TextField fx:id="editorialDetalleLibro" editable="false" layoutX="96.0" layoutY="114.0" stylesheets="@../Styles/TextStyle.css" />
+                        <TextField fx:id="anoDetalleLibro" editable="false" layoutX="177.0" layoutY="149.0" stylesheets="@../Styles/TextStyle.css" />
+                        <TextField fx:id="isbnDetalleLibro" editable="false" layoutX="129.0" layoutY="187.0" stylesheets="@../Styles/TextStyle.css" />
+                        <TextField fx:id="precioDetalleLibro" editable="false" layoutX="80.0" layoutY="221.0" stylesheets="@../Styles/TextStyle.css" />
+                        <Button fx:id="btnAgregarAlCarrito" layoutX="548.0" layoutY="425.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="174.0" style="-fx-background-color: #F1DE9C;" text="Agregar al carrito">
                            <font>
                               <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                            </font>
                         </Button>
-                        <ComboBox layoutX="28.0" layoutY="282.0" prefWidth="150.0" promptText="Número de Copias" stylesheets="@../Styles/TextStyle.css" />
+                        <ComboBox fx:id="cboxNumeroCopias" layoutX="117.0" layoutY="261.0" prefWidth="150.0" stylesheets="@../Styles/TextStyle.css" />
+                        <Label layoutX="31.0" layoutY="260.0" prefHeight="26.0" prefWidth="75.0" text="Cantidad">
+                           <font>
+                              <Font name="Tw Cen MT Bold" size="17.0" />
+                           </font>
+                        </Label>
                      </children>
                   </AnchorPane>
                </children>
