--- a/src/gui/Carrito.fxml
+++ b/src/gui/Carrito.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.CarritoController">
+<AnchorPane id="AnchorPane" fx:id="anchorMain" prefHeight="650.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.CarritoController">
    <children>
       <AnchorPane layoutY="102.0" prefHeight="547.0" prefWidth="600.0" style="-fx-background-color: #F2F2F2;">
          <children>
@@ -22,7 +22,7 @@
                   <TableColumn prefWidth="125.0" styleClass="column-header-background" text="Precio " />
               </columns>
             </TableView>
-            <Label layoutX="50.0" layoutY="32.0" prefHeight="27.0" prefWidth="83.0" text="Mi Carrito">
+            <Label layoutX="259.0" layoutY="30.0" prefHeight="27.0" prefWidth="97.0" text="Tus compras">
                <font>
                   <Font name="Tw Cen MT Condensed" size="24.0" />
                </font>
@@ -33,14 +33,19 @@
                   <Font name="Tw Cen MT Condensed" size="20.0" />
                </font>
             </Label>
-            <Button layoutX="415.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="30.0" prefWidth="135.0" style="-fx-background-color: #F1DE9C;" text="Seguir con Compra">
+            <Button layoutX="415.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="30.0" prefWidth="135.0" style="-fx-background-color: #F1DE9C;" text="Confirmar">
                <font>
                   <Font name="Tw Cen MT Condensed Bold" size="16.0" />
                </font>
             </Button>
-            <Button layoutX="300.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="30.0" prefWidth="97.0" style="-fx-background-color: #F1DE9C;" text="Eliminar">
+            <Button layoutX="272.0" layoutY="496.0" mnemonicParsing="false" onMouseClicked="#onClicDetalles" prefHeight="25.0" prefWidth="125.0" style="-fx-background-color: #F1DE9C;" text="Eliminar Libro">
                <font>
                   <Font name="Tw Cen MT Condensed Bold" size="16.0" />
+               </font>
+            </Button>
+            <Button layoutX="50.0" layoutY="31.0" mnemonicParsing="false" onAction="#onCLicVolver" onMouseClicked="#onClicDetalles" prefHeight="23.0" prefWidth="67.0" style="-fx-background-color: #F1DE9C;" text="Volver">
+               <font>
+                  <Font name="Tw Cen MT Condensed Extra Bold" size="13.0" />
                </font>
             </Button>
          </children>
