Calculados totales, corregido lo del botón de volver

--- a/src/gui/Carrito.fxml
+++ b/src/gui/Carrito.fxml
@@ -27,7 +27,7 @@
                   <Font name="Tw Cen MT Condensed" size="24.0" />
                </font>
             </Label>
-            <TextField layoutX="50.0" layoutY="493.0" promptText="Subtotal a pagar" stylesheets="@../Styles/TextStyle.css" />
+            <TextField fx:id="subtotal" layoutX="50.0" layoutY="493.0" promptText="Subtotal a pagar" stylesheets="@../Styles/TextStyle.css" />
             <Label layoutX="50.0" layoutY="459.0" prefHeight="27.0" prefWidth="83.0" text="Subtotal">
                <font>
                   <Font name="Tw Cen MT Condensed" size="20.0" />
